# Lawyance

./: .env_example  .gitignore  README.en.md  README.ja.md  README.md  agent.py  auth.py  deli_client.py  function_calling.py  hash.py  index.html  main.py  mcps.py  ocp.py  output_sanitizer.py  package-lock.json  package.json  pkulaw_client.py  pnpm-lock.yaml  prompt_loader.py  pyproject.toml  requirements.txt  sessions.json  tools.py  tsconfig.json  vite.config.ts
RAG/: data_maker.py  law_data_search.py
agents/: __init__.py  default.py  plan_and_solve.py  react.py
data/: sessions.json  titles.json
mcp/: PDF_processor.py  __init__.py  deli_client.py  memory_client.py  pkulaw_client.py  qcc_client.py  word_annotator.py
mcps/: deli_client.py  pkulaw_client.py
memory_system/: __init__.py  service.py
memory_system/service/: __init__.py  api.py  core.py  embeddings.py  errors.py  extraction.py  mutations.py  ranking.py  schema.py  scoring.py  state.py  store.py  utils.py
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AdminDashboard.tsx  AnimatedSwitch.tsx  Brand.tsx  Header.tsx  InputArea.tsx  Login.tsx  Mermaid.tsx  MessageItem.tsx  MessageList.tsx  Sidebar.tsx  StorageIndicator.tsx  WorkspacePanel.tsx
src/hooks/: useChat.ts  useStorage.ts  useTheme.ts  (+1 more)
tests/: test_agent_dynamic_prompts.py  test_agent_resource_guards.py  test_function_calling_tools.py  test_law_data_search.py  test_mcps_workspace_paths.py  test_memory_system.py  test_ocp.py  test_prompt_loader.py  test_remaining_vulnerability_fixes.py  test_security_hardening.py
(+924 files in other folders)
