[project]
name = "gdut-lawyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "google-search-results>=2.4.2",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "serpapi>=1.0.2",
    "uvicorn>=0.42.0",
]
